loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:3: error: '(' expected but '{' found.
}else if{
        ^LoopStairs:8: error: illegal start of simple expression
	}
        ^