loopfor.LoopStairs.scala.code
if(!FacingWall()){
  forward();
}else if{
  left();
  forward();
}